--- a/about.html
+++ b/about.html
@@ -18,11 +18,11 @@ header-img: "img/post-bg-rwd.jpg"
     <blockquote><p>冰冻三尺 非一日之寒<br>
     积土成山 非斯须之作</p></blockquote>
 
-    <p>Hey，我是<strong>柏荧(BY)</strong>，一只iOS程序猿，现在厦门工作。</p>
+    <p>Hey，我是<strong>林夕(linxi)</strong>，一只iOS程序猿，现在上海工作。</p>
 
-    <p>工作、学习之余，我还是一个健身爱好者，同时也非常喜欢拳击。</p>
+    <p>工作、学习之余，我还是一个音乐爱好者，同时也非常喜欢唱歌。</p>
 
-    <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。我在GitHub主页<a href="https://github.com/qiubaiying">👉GitHub·BY</a> 与 简书主页<a href="https://http://www.jianshu.com/u/e71990ada2fd">👉BY</a>。如果有什么问题，欢迎提出探讨~</p>
+    <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。我在GitHub主页<a href="https://github.com/achili">👉GitHub·Achili</a> 与 简书主页<a href="https://http://www.jianshu.com/u/2f2368672d51">👉LinXi</a>。如果有什么问题，欢迎提出探讨~</p>
 
     <p></p>
     
@@ -113,7 +113,7 @@ header-img: "img/post-bg-rwd.jpg"
     owner: '{{site.gitalk.owner}}',
     admin: ['{{site.gitalk.admin}}'],
     distractionFreeMode: {{site.gitalk.distractionFreeMode}},
-    id: 'about',
+    id: 'about'
     });
     gitalk.render('gitalk-container');
 </script>
